* Wed Nov 19 2003 <gerbier@users.sourceforge.net> 1.4.5-2
- change filter behavior to be more robust
- read -r on /etc/popt to keep backslash
- fix comment-missing option
- remove rpmlib dependencies from specfile
- remove gpg key from provide list
- fix wildcard problem in file list (guile) (Han Holl)

* Wed Jul  2 2003 <valery_reznic@users.sourceforge.net> 1.4.5-1
- switch from 'case' to usinf AskYesNo function
- added -y/--verify flag
- added -c/--comment-missing flag
- added missing -w/--warning to the Usage message

* Thu Jun 12 2003 <valery_reznic@users.sourceforge.net> 1.4.4-1
- added -m/--modify option - invoke script after rpm's file unpackaging
- added -a/--additional option - pass additional flags to rpmbuild
- added -D/--define option - set defines for rpmbuild
- after specfile editing (with -e option) is possible now abort rpm build 

* Mon Jun 09 2003 <valery_reznic@users.sourceforge.net> 1.4.3-1
- fixed problem with (none) in the FILELANG query
- rpmrebuild now working with rpm-4.2
- Makefile now can work with both  rpmbuild and rpm as package builder

* Mon Jun 02 2003 <valery_reznic@users.sourceforge.net> 1.4.2-1
- fixed problem with specspo (now I query package and not specspo information)

* Mon Feb 03 2003 <gerbier@users.sourceforge.net> 1.4.1-1
- add warning flag (-w/--warning) 

* Fri Jan 17 2003 <gerbier@users.sourceforge.net> 1.4.0-1
- public release of 1.3 dev branch

* Mon Dec 29 2002 <valery_reznic@users.sourceforge.net> 1.3-1
- add '-p' option. Now is possible rebuild not only installed rpm, but rpm file too. May be usefull with '-e' or '--filter' option

* Mon Dec 18 2002 <valery_reznic@users.sourceforge.net> 1.3-1
- more simple and robust filter

* Thu Dec 12 2002 <gerbier@users.sourceforge.net> 1.3.1
- add filter option for "pluggins"
- rewrite --resolv-dep as pluggin

* Mon Dec 10 2002 <valery_reznic@users.sourceforge.net> 1.3-0
- change long options name to be more consistant
- added support for %%lang
